Settings work